fix: remove errors in endpoints